--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -105,58 +105,72 @@ jobs:
             echo "[Deploy] Running migrations"
             npm run migrate:run 2>/dev/null || npm run migrate 2>/dev/null || echo "No migrations to run"
             
-            echo "[Deploy] Stopping all processes on port 8080"
-            # Kill any process using port 8080
-            sudo fuser -k 8080/tcp 2>/dev/null || true
+            echo "[Deploy] Aggressively stopping all Node.js and npm processes"
+            # Kill ALL node processes that might be running the API
+            sudo pkill -9 -f "node.*server.js" 2>/dev/null || true
+            sudo pkill -9 -f "npm.*start" 2>/dev/null || true
+            sudo pkill -9 -f "node.*src/server.js" 2>/dev/null || true
+            
+            echo "[Deploy] Killing any process using port 8080"
+            # Multiple methods to ensure port is completely free
+            sudo fuser -k -9 8080/tcp 2>/dev/null || true
             sudo lsof -ti:8080 | xargs -r sudo kill -9 2>/dev/null || true
-            sleep 2
             
-            # Verify port is free
-            if sudo lsof -ti:8080 >/dev/null 2>&1; then
-              echo "[Deploy] ERROR: Port 8080 still in use"
-              sudo lsof -i:8080
-              exit 1
-            fi
+            echo "[Deploy] Waiting for processes to fully terminate"
+            sleep 3
             
-            echo "[Deploy] Port 8080 is free, starting service"
-            
-            # Try systemd first if available
-            if command -v systemctl >/dev/null 2>&1 && sudo systemctl list-units --type=service --all | grep -q eassist-api; then
-              echo "[Deploy] Starting via systemd"
-              sudo systemctl start eassist-api
-              sleep 3
-              if sudo systemctl is-active eassist-api >/dev/null 2>&1; then
-                echo "[Deploy] ✅ Service started successfully via systemd"
-                sudo systemctl status eassist-api --no-pager
-                exit 0
+            # Final verification that port is free
+            for attempt in 1 2 3; do
+              if sudo lsof -ti:8080 >/dev/null 2>&1; then
+                echo "[Deploy] Attempt $attempt: Port 8080 still busy, killing remaining processes"
+                sudo lsof -ti:8080 | xargs -r sudo kill -9 2>/dev/null || true
+                sudo fuser -k -9 8080/tcp 2>/dev/null || true
+                sleep 2
               else
-                echo "[Deploy] Systemd start failed, trying manual start"
-                sudo systemctl status eassist-api --no-pager || true
+                echo "[Deploy] Port 8080 confirmed free"
+                break
               fi
-            fi
+              if [ $attempt -eq 3 ]; then
+                echo "[Deploy] ERROR: Cannot free port 8080 after 3 attempts"
+                sudo lsof -i:8080 || true
+                exit 1
+              fi
+            done
             
-            # Manual start as fallback
-            echo "[Deploy] Starting manually with nohup"
+            echo "[Deploy] Starting service with nohup"
+            # Ensure log directory and file permissions
             sudo mkdir -p /var/log
-            sudo chown $USER /var/log/eassist-api.out 2>/dev/null || sudo touch /var/log/eassist-api.out
+            sudo touch /var/log/eassist-api.out
+            sudo chown $USER /var/log/eassist-api.out 2>/dev/null || true
+            
+            # Start with explicit environment and immediate background
+            cd ${{ env.DEPLOY_PATH }}
             NODE_ENV=production PORT=8080 nohup npm start >/var/log/eassist-api.out 2>&1 &
             START_PID=$!
-            echo "[Deploy] Started with PID: $START_PID"
+            echo "[Deploy] Started process with PID: $START_PID"
             
-            # Wait for service to start
-            for i in {1..15}; do
+            # Wait for successful startup with timeout
+            echo "[Deploy] Waiting for service to bind to port 8080..."
+            for i in {1..20}; do
               if sudo lsof -ti:8080 >/dev/null 2>&1; then
-                echo "[Deploy] ✅ Service is listening on port 8080"
-                echo "[Deploy] Deployment completed successfully"
+                LISTENING_PID=$(sudo lsof -ti:8080 | head -n1)
+                echo "[Deploy] ✅ Service successfully listening on port 8080 (PID: $LISTENING_PID)"
+                echo "[Deploy] Deployment completed successfully at $(date)"
+                # Show final status
+                sudo lsof -i:8080 | head -5
                 exit 0
               fi
-              echo "[Deploy] Waiting for service to start ($i/15)..."
+              echo "[Deploy] Waiting for startup ($i/20)..."
               sleep 1
             done
             
-            echo "[Deploy] ❌ Service failed to start"
-            echo "[Deploy] Recent logs:"
-            tail -50 /var/log/eassist-api.out 2>/dev/null || echo "No logs found"
+            echo "[Deploy] ❌ Service failed to bind to port 8080 within 20 seconds"
+            echo "[Deploy] Process status:"
+            ps aux | grep -E "(node|npm)" | grep -v grep || echo "No node/npm processes found"
+            echo "[Deploy] Recent application logs:"
+            tail -50 /var/log/eassist-api.out 2>/dev/null || echo "No logs available"
+            echo "[Deploy] Port usage:"
+            sudo ss -tulpn | grep :8080 || echo "No process on port 8080"
             exit 1'
 
       - name: Summary
